<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_remind"
        android:icon="@drawable/ui_selector_bottom_nav_remind"
        android:title="@string/ui_bottom_nav_menu_remind"/>
    <item
        android:id="@+id/navigation_target"
        android:icon="@drawable/ui_selector_bottom_nav_target"
        android:title="@string/ui_bottom_nav_menu_target"/>
    <item
        android:id="@+id/navigation_memorandum"
        android:icon="@drawable/ui_selector_bottom_nav_memorandum"
        android:title="@string/ui_bottom_nav_menu_memorandum"/>
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ui_selector_bottom_nav_user"
        android:title="@string/ui_bottom_nav_menu_user"/>
</menu>